fixed issue with alignment of filter button

--- a/frontend/src/css/index.scss
+++ b/frontend/src/css/index.scss
@@ -58,6 +58,9 @@ body, .modal-content{
 
 html, body{
   overflow-x: hidden;
+  position: relative;
+  height: 100%;
+  width:100%;
 }
 
 #scrollContainer {
